# multi_tools

./: .gitignore  README.md  generate_embeddings.py
ai/: README.txt  backend_integration.py  generate_embeddings.py  main.py  pyproject.toml  requirements.txt  test_camera.py
ai/ai/data/: embeddings.npy
ai/detection/: yolo_detector.py
ai/recognition/: facenet_model.py  matcher.py
ai/utils/: compare_faces.py  image_tools.py  log_similarity.py  visualize_embeddings.py
back_end/: db.sqlite3  main.py  pyproject.toml  reqs.txt
back_end/api/: serializer.py  urls.py
back_end/api/views/: __init__.py  attendanceAPI.py  groupAPI.py  scheduleAPI.py  studentAPI.py  tools.py
back_end/app/: admin.py  models.py  urls.py  views.py
back_end/app/migrations/: 0001_initial.py  0002_alter_student_telegram_id.py  0003_subject_study_teacher_student_gpa_grade_and_more.py  0004_alter_grade_bd_one_alter_grade_bd_two_and_more.py  0005_student_face_image.py  0006_marks.py  0007_rename_marks_mark.py  0008_remove_teacher_subject_alter_schedule_subject.py  0009_rename_mark_attendance.py  0010_alter_attendance_student.py  0011_alter_attendance_subject.py  0012_attendance_schedule_alter_attendance_subject.py  0013_alter_attendance_schedule.py  0014_remove_attendance_subject_remove_attendance_time_and_more.py
back_end/app/templates/: base.html  home.html  studentDetail.html  tools.html
back_end/bot/: bot_main.py  main.py
back_end/core/: settings.py  urls.py
back_end/core/fixtures/: dump.json
back_end/scripts/: generate_schedule.py
back_end/static/css/: styles.css
(+20 files in other folders)
